[project]
name = "Livenodes-Matplotlib"
dynamic = ['version']
description = "LiveNodes: node based live streaming sensor/data and visualization suite."
authors = [
    { name = "Yale Hartmann", email = "yale.hartmann@uni-bremen.de" }
]
# TODO: figure out how/if to add livenodes here... for now install manually in venv via:
# pip install . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
# pip install -e . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
dependencies = [
    "livenodes>=0.12.1b1",
    "livenodes-common-ports>=0.12.1b4",
    "numpy>=1.22.1",
    "seaborn>=0.11.2",
    "matplotlib>=3.5.1",

    "setuptools>=60.0.0"
]

[project.entry-points."livenodes.nodes"]
draw_broken_bars = "livenodes_matplotlib.draw_broken_bars:Draw_broken_bars"
draw_stacked_bars = "livenodes_matplotlib.draw_stacked_bars:Draw_stacked_bars"
draw_gmm = "livenodes_matplotlib.draw_gmm:Draw_gmm"
draw_heatmap = "livenodes_matplotlib.draw_heatmap:Draw_heatmap"
draw_hbars = "livenodes_matplotlib.draw_hbars:Draw_hbars"
draw_lines = "livenodes_matplotlib.draw_lines:Draw_lines"
draw_scatter = "livenodes_matplotlib.draw_scatter:Draw_scatter"
draw_text_display = "livenodes_matplotlib.draw_text_display:Draw_text_display"


[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=7.0.1"
]

[build-system]
requires = [
    "setuptools>=60",
    "wheel",
    "setuptools_scm >= 3.0.0",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 140
target-version = ['py38']
skip-string-normalization = true